<resources>
    <string name="app_name">Movie</string>

    <string name="movie_running_time">러닝타임: %d분</string>
    <string name="movie_screening_date">상영일: %d.%d.%d ~ %d.%d.%d</string>

    <!--  영화 목록  -->
    <string name="main_movie_book">지금 예매</string>

    <!--  영화 예매 - 완료  -->
    <string name="summary_movie_screening_date">2025.4.1 11:00</string>
    <string name="summary_movie_title">해리 포터와 마법사의 돌</string>
    <string name="summary_notification_message">영화 상영 시작 시간 15분 전까지\n취소가 가능합니다.</string>
    <string name="summary_movie_screening_date_time">%d.%d.%d %d:%d</string>
    <string name="summary_movie_people_count">일반 %d명</string>
    <string name="summary_movie_divider">|</string>
    <string name="summary_movie_total_amount">%,d원 (현장 결제)</string>

    <!--  영화 예매 - 확인  -->
    <string name="ticketing_minus_people_count">-</string>
    <string name="ticketing_plus_people_count">+</string>
    <string name="ticketing_movie_selected">선택 완료</string>
    <string name="ticketing_movie_poster_content_description">영화 포스터입니다</string>
    <string name="ticketing_reservation_check">예매 확인</string>
    <string name="ticketing_reservation_message">정말 예매하시겠습니까?</string>
    <string name="ticketing_reservation_complete">예매 완료</string>
    <string name="ticketing_reservation_cancel">취소</string>
    <string name="ticketing_people_count_minimum">영화 관람 인원이 최소 1명이상이어야 합니다.</string>
    <string name="ticketing_movie_already_closed">이미 상영이 종료된 영화입니다</string>
    <string name="ad_content_description">우아한 테크 코스 광고입니다.</string>
    <string name="seat_screen">SCREEM</string>
    <string name="seat_check">확인</string>
    <string name="seat_a1">A1</string>
    <string name="seat_a2">A2</string>
    <string name="seat_a3">A3</string>
    <string name="seat_a4">A4</string>
    <string name="seat_b1">B1</string>
    <string name="seat_b2">B2</string>
    <string name="seat_b3">B3</string>
    <string name="seat_b4">B4</string>
    <string name="seat_c1">C1</string>
    <string name="seat_c2">C2</string>
    <string name="seat_c3">C3</string>
    <string name="seat_c4">C4</string>
    <string name="seat_d1">D1</string>
    <string name="seat_d2">D2</string>
    <string name="seat_d3">D3</string>
    <string name="seat_d4">D4</string>
    <string name="seat_e1">E1</string>
    <string name="seat_e2">E2</string>
    <string name="seat_e3">E3</string>
    <string name="seat_e4">E4</string>
</resources>
