<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/summary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ticket.SummaryActivity">

    <LinearLayout
        android:id="@+id/linearLayout_summary_notification_message_box"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:background="@color/purple_400">

        <TextView
            android:id="@+id/textView_summary_notification_message"
            style="@style/summaryNotificationMessageTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:text="@string/summary_notification_message"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_summary_movie_title"
        style="@style/summaryMovieTitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/summary_movie_title" />

    <TextView
        android:id="@+id/textView_summary_movie_screening_date_time"
        style="@style/summaryMovieScreeningDateTimeTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/summary_movie_screening_date" />

    <TextView
        android:id="@+id/textView_summary_movie_people_count"
        style="@style/summaryMoviePeopleCountTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toEndOf="parent"
        tools:text="일반 2명" />

    <TextView
        android:id="@+id/textView_summary_movie_total_amount"
        style="@style/summaryMovieTotalAmountTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="parent"
        tools:text="26,000원(현장 결제)" />
</LinearLayout>
